Settings: Add HorizonDroid Version to Firmware version window
Change-Id: I03884e8fdf52042987776948e2d40e91f17232ce
Signed-off-by: ryzenforce990 <ryzenforce990@gmail.com>
Signed-off-by: Kizziama <kizziama@proton.me>

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -21,6 +21,15 @@
     android:title="@string/firmware_version"
     settings:keywords="@string/keywords_android_version">
 
+    <!-- HorizonDroid version -->
+    <Preference
+        android:key="horizon_release_version"
+        android:title="@string/horizon_release_version"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:searchable="false"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.HorizonVersionDetailPreferenceController"/>
+
     <!-- Android version -->
     <Preference
         android:key="os_firmware_version"
