Add Cloudflare DNS as a private DNS provider
Change-Id: I7e8a320d47e7c5ddbcb9acfaf23032ae92d5d70d
Signed-off-by: ryzenforce990 <ryzenforce990@gmail.com>

--- a/res/values/horizon_strings.xml
+++ b/res/values/horizon_strings.xml
@@ -55,6 +55,11 @@
     <string name="wifi_timeout_summary_2hours">2 hours</string>
     <string name="wifi_timeout_summary_4hours">4 hours</string>
     <string name="wifi_timeout_summary_8hours">8 hours</string>
-    
+
+    <!-- Private DNS -->
+    <string name="private_dns_mode_cloudflare" translatable="false">Cloudflare DNS</string>
+    <!-- Alternative: 1dot1dot1dot1.cloudflare-dns.com -->
+    <string name="private_dns_hostname_cloudflare" translatable="false">one.one.one.one</string>
+
 </resources>
 
