About: Add HorizonDroid logo inside firmware version
Change-Id: I665b4a8d9e75aa3fd108462dd4a11cb2dad32948
Signed-off-by: Joey Huab <joey@evolution-x.org>
Signed-off-by: aftershock009 <aseprosadialawi@outlook.co.id>
Signed-off-by: ryzenforce990 <ryzenforce990@gmail.com>

--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -74,5 +74,10 @@
 
     <!-- Switch bar disabled state color-->
     <color name="switch_bar_state_disabled_color">#1FE3E3E3</color>
+
+    <!-- Monet color pallete -->
+     <color name="primary_monet">@android:color/system_accent1_100</color>
+     <color name="sec_monet">@android:color/system_accent3_300</color>
+     <color name="opt_monet">@android:color/system_accent1_200</color>
 </resources>
 
