--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -217,4 +217,9 @@
 
     <!-- Switch bar disabled state color-->
     <color name="switch_bar_state_disabled_color">#1F1F1F1F</color>
+
+     <!-- Monet color pallete -->
+     <color name="primary_monet">@android:color/system_accent1_500</color>
+    <color name="sec_monet">@android:color/system_accent3_300</color>
+    <color name="opt_monet">@android:color/system_accent1_600</color>
 </resources>
