--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -21,6 +21,12 @@
     android:title="@string/firmware_version"
     settings:keywords="@string/keywords_android_version">
 
+    <!-- HorizonDroid logo -->
+    <com.android.settingslib.widget.LayoutPreference
+        android:key="horizon_logo"
+        android:layout="@layout/horizon_logo"
+        android:selectable="false"/>
+
     <!-- HorizonDroid version -->
     <Preference
         android:key="horizon_release_version"
