--- a/res/values/horizon_strings.xml
+++ b/res/values/horizon_strings.xml
@@ -115,5 +115,8 @@
     <string name="dashboard_random5">Hi User!</string>
     <string name="dashboard_random6">What\'s up?</string>
 
+    <!-- Battery temperature -->
+    <string name="battery_temperature">Battery temperature</string>
+
 </resources>
 
