--- a/res/values/horizon_strings.xml
+++ b/res/values/horizon_strings.xml
@@ -14,4 +14,8 @@
     <!-- About Phone -->
     <string name="declan_storage_usage_summary">%1$s %2$s used</string>
     <string name="declan_storage_total_summary">%1$s %2$s</string>
+
+    <!-- Game Space -->
+    <string name="game_space_title">Game Space</string>
+    <string name="game_space_summary">Enhance your gaming experience</string>
 </resources>
