BatteryHealth: Add Battery cycle, temp, capacity and a new design
Co-authored-by: Lucchetto <lucchetto.tie@live.com>
Co-authored-by: SuperDroidBond <superdroidbond@yahoo.com>
Co-authored-by: AshutoshSundresh <62063875+AshutoshSundresh@users>

Signed-off-by: Trishiraj <gamerprince.exp@gmail.com>

fix BatteryHealth Layout

Signed-off-by: ryzenforce990 <ryzenforce990@gmail.com>

--- a/res/values/custom_plurals.xml
+++ b/res/values/custom_plurals.xml
@@ -15,4 +15,10 @@
         <item quantity="other">Up to <xliff:g id="device_num">%1$d</xliff:g> devices can connect to this hotspot</item>
         <item quantity="one">Up to <xliff:g id="device_num">%1$d</xliff:g> device can connect to this hotspot</item>
     </plurals>
+
+     <!-- Battery health -->
+    <bool name="config_supportBatteryHealth">false</bool>
+    <string name="config_batteryCalculatedCapacity">/sys/class/power_supply/bms/charge_full</string>
+    <string name="config_batteryDesignCapacity">/sys/class/power_supply/bms/charge_full_design</string>
+
 </resources>
