--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -33,6 +33,12 @@
         settings:controller="com.android.settings.fuelgauge.BatteryHeaderPreferenceController" />
 
     <com.android.settingslib.widget.LayoutPreference
+        android:key="battery_stat"
+        android:layout="@layout/preference_battery_stat"
+        android:selectable="false"
+        settings:searchable="false" />
+
+    <com.android.settingslib.widget.LayoutPreference
         android:key="battery_help_message"
         android:layout="@layout/preference_battery_error"
         android:selectable="false"
@@ -75,10 +81,11 @@
         android:fragment="com.android.settings.lineage.health.ChargingControlSettings"
         settings:controller="com.android.settings.lineage.health.ChargingControlPreferenceController" />
 
-    <com.android.settings.fuelgauge.batteryusage.PowerGaugePreference
-        android:key="battery_temperature"
-        android:title="@string/battery_temperature"
-        android:selectable="false" />
+    <com.android.settingslib.widget.LayoutPreference
+        android:key="battery_stat"
+        android:layout="@layout/preference_battery_stat"
+        android:selectable="false"
+        settings:searchable="false" />
 
     <com.android.settingslib.widget.FooterPreference
         android:key="power_usage_footer"
