DeviceInfo: Add back SELinux status to About Phone
Change-Id: I3bfabe4fbf8e30d944474b772f57d2e2b1c867d7
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>
Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>
Signed-off-by: aftershock009 <aseprosadialawi@outlook.co.id>
Signed-off-by: ryzenforce990 <ryzenforce990@gmail.com>

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -277,4 +277,14 @@
     <string name="doze_gesture_ambient_summary">Show Ambient Display instead of fully waking the screen up</string>
     <string name="gesture_wake_ambient">Show Ambient</string>
     <string name="gesture_wake">Fully wake</string>
+
+    <!-- About phone screen,  setting option name  [CHAR LIMIT=40] -->
+    <string name="selinux_status">SELinux status</string>
+
+    <!-- These statuses are displayed when a device was built with SE Android supoprt.
+    These are displayed by the settings app in the about section. -->
+    <string name="selinux_status_disabled">Disabled</string>
+    <string name="selinux_status_permissive">Permissive</string>
+    <string name="selinux_status_enforcing">Enforcing</string>
+
 </resources>
