Settings: Build HorizonLab into Settings
commit 122480e9795d751c48160e91ee51c54a884953e8
Author: Alex Cruz <alex@dirtyunicorns.com>
Date:   Sat Jul 17 18:53:20 2021 +0000

    Settings: Add expandable bottombar for extensions

    Github Repo:- https://github.com/st235/ExpandableBottomBar

    Co-authored-by: Shubham Singh <coolsks94@gmail.com>
    Signed-off-by: Shubham Singh <coolsks94@gmail.com>
    Change-Id: I310c396b474535ec1584ab164029755a4da18d84
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

commit b1a6e09bf2fd6d7933f6b38930b355df5062f8da
Author: maxwen <max.weninger@gmail.com>
Date:   Fri Sep 8 05:07:18 2017 +0530

    Build Extensions into Settings

      * Add it on dashboard
      * Set proper priority to show it below Apps & Notifications

    [jaysonedson: Ported to android11 and Android.bp]

    Signed-off-by: Shubham Singh <coolsks94@gmail.com>
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
    Change-Id: I594d89ad713a4735f8301c8e6372790812b2d86f
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

Change-Id: I70dbb85203970a2e551573abe8b27ee38c5bd38e
Signed-off-by: ryzenforce990 <ryzenforce990@gmail.com>

--- a/res/values/custom_config.xml
+++ b/res/values/custom_config.xml
@@ -38,4 +38,8 @@
 
     <!-- Whether to show min refresh rate in display settings -->
     <bool name="config_show_min_refresh_rate_switch">false</bool>
+
+    <color name="homepage_horizonlab_background">#536dfe</color>
+
+
 </resources>
