--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -222,4 +222,6 @@
      <color name="primary_monet">@android:color/system_accent1_500</color>
     <color name="sec_monet">@android:color/system_accent3_300</color>
     <color name="opt_monet">@android:color/system_accent1_600</color>
+
+    <color name="hzn_cardview_color">@android:color/system_neutral1_10</color>
 </resources>
