Settings: Introduce New aboutphone Neptune!
Co-authored-by: ryzenforce990 <ryzenforce990@gmail.com>
Change-Id: Ie8c8946d5aeaf94741c9b99e67244ff9a0429a63

--- a/res/values/horizon_strings.xml
+++ b/res/values/horizon_strings.xml
@@ -9,4 +9,8 @@
 
     <!-- HorizonDroid Maintainer -->
     <string name="maintainer">HorizonDroid Maintainer</string>
+
+    <!-- About Phone -->
+    <string name="declan_storage_usage_summary">%1$s %2$s used</string>
+    <string name="declan_storage_total_summary">%1$s %2$s</string>
 </resources>
