--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -21,19 +21,34 @@
     android:key="my_device_info_pref_screen"
     android:title="@string/about_settings">
 
+    <com.android.settingslib.widget.LayoutPreference
+        android:clickable="false"
+        android:layout="@layout/hzn_banner_header"
+        android:key="horizon_logo"
+        android:order="-999" />
+    <com.android.settings.widget.ValidatedEditTextPreference
+        android:icon="@drawable/ic_about_device"
+        android:title="@string/my_device_info_device_name_preference_title"
+        android:key="device_name"
+        android:summary="@string/summary_placeholder"
+        android:order="-2"
+        settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
+        settings:enableCopying="true"
+        settings:layout="@layout/hzn_preference_device_name" />
+    <Preference
+        android:icon="@drawable/ic_about_storage"
+        android:title="Storage"
+        android:key="device_storage"
+        android:summary="@string/summary_placeholder"
+        android:order="-1"
+        settings:controller="declan.prjct.settings.aboutphone.controller.DeviceStorageController"
+        settings:enableCopying="true"
+        settings:layout="@layout/hzn_preference_storage" />
+
     <PreferenceCategory
         android:key="basic_info_category"
         android:selectable="false"
         android:title="@string/my_device_info_basic_info_category_title">
-
-        <!-- Device name -->
-        <com.android.settings.widget.ValidatedEditTextPreference
-            android:key="device_name"
-            android:order="1"
-            android:title="@string/my_device_info_device_name_preference_title"
-            android:summary="@string/summary_placeholder"
-            settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
-            settings:enableCopying="true"/>
 
         <!-- Account name -->
         <Preference
