--- a/res/values/horizon_strings.xml
+++ b/res/values/horizon_strings.xml
@@ -6,6 +6,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- About device screen, HorizonDroid Release Version -->
     <string name="horizon_release_version">HorizonDroid Release Version</string>
+    <string name="about_team_title">About Horizon</string>
 
     <!-- HorizonDroid Maintainer -->
     <string name="maintainer">HorizonDroid Maintainer</string>
